--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="jumbotron justify-content:center"></p>
       <h1 class="text-center">Who am I?</h1>
       <div class="text-center">
-        <img src="/images/profile.jpg" alt="" class="rounded-circle">
+        <img src="profile.jpg" alt="" class="rounded-circle">
       </div>
       <br>
       <div class="text-center">
