--- a/index.html
+++ b/index.html
@@ -51,10 +51,18 @@
           <p>I've worked as an educator and developer for over five years and have the knowledge and experience to help you with your next project.
             My expertise lies in creating rapidly scalable applications, <code>back-end development</code>, and a great UX. Check out my work below and get in touch!</p>
             <div class="row">
-              <i class="fab fa-python" style="font-size:80px; padding:65px"></i>
-              <i class="fab fa-node" style="font-size:80px; padding:65px"></i>
-              <i class="fab fa-microsoft" style="font-size:80px; padding:65px"></i>
-              <i class="fas fa-code-branch" style="font-size:80px; padding:65px"></i>
+              <div class="col-sm-3">
+                <i class="fab fa-python" style="font-size:80px"></i>
+              </div>
+              <div class="col-sm-3">
+                  <i class="fab fa-node" style="font-size:80px"></i>
+              </div>
+              <div class="col-sm-3">
+                <i class="fab fa-microsoft" style="font-size:80px"></i>
+              </div>
+              <div class="col-sm-3">
+                <i class="fas fa-code-branch" style="font-size:80px"></i>
+              </div>
             </div>
         </div>
       </div>
