--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               encourages studying and repetition via a gamification model for the classroom. Teachers
               can create online quizzes where the students earn XP for completing each quiz.
               </p>
-              <a href="http://rdominguez.pythonanywhere.com/"><i class="fas fa-external-link-square-alt" title="Check it out" style="font-size:36px"></i></a>
+              <a class="btn" href="http://rdominguez.pythonanywhere.com/"><i class="fas fa-external-link-square-alt" title="Check it out" style="font-size:36px"></i></a>
             </div>
           </div>
         </div>
@@ -110,9 +110,16 @@
               <p class="card-text">I've become a loyal follower of the <a href="http://flask.pocoo.org/">Flask microframework</a>.
               This is a Python back-end which is simple and open. This repository is a detailed example
               built for students to demonsrate Flask's ease and power.</p>
-              <a href="https://github.com/robertjdominguez/flas-guide"><i class="fab fa-github-square" title="Code on GitHub" style="font-size:36px" aria-hidden="true"></i></a>
+              <a href="https://github.com/robertjdominguez/flask-guide"><i class="fab fa-github-square" title="Code on GitHub" style="font-size:36px" aria-hidden="true"></i></a>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <a href="/"><button type="button" class="btn btn-success">
+            Click here to find out more
+          </button></a>
         </div>
       </div>
     </div>
