--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
           </div>
         </div>
       </div>
+      <br>
       <div class="row">
-        <div class="col-md-4">
+        <div class="mx-auto">
           <a href="/"><button type="button" class="btn btn-success">
             Click here to find out more
           </button></a>
