--- a/services.html
+++ b/services.html
@@ -11,6 +11,53 @@
 
 <body>
 
+<section>
+  <div class="container">
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Student Centric</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Education Gamification</h6>
+              <p class="card-text">Student Centric is a gamification platform for students that
+              encourages studying and repetition via a gamification model for the classroom. Teachers
+              can create online quizzes where the students earn XP for completing each quiz.
+              </p>
+              <a class="btn" href="http://rdominguez.pythonanywhere.com/"><i class="fas fa-external-link-square-alt" title="Check it out" style="font-size:36px"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Cheese Wrangler</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Dynamic Trip Manifests</h6>
+              <p class="card-text">The "Cheese Wrangler" system is a dynamically integrated
+              bus manifest system that can be totally controlled via SMS. Using <a href="https://www.twilio.com">Twilio's API</a>,
+              leaders can create trips and students can easily register for the trip itself. Admins
+              have a dashboard that allows them to monitor the progress of trips and see every detail
+              of the trip's manifest.</p>
+              <a href="https://github.com/robertjdominguez/busDriver"><i class="fab fa-github-square" title="Code on GitHub" style="font-size:36px" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">flask-guide</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Evangelism</h6>
+              <p class="card-text">I've become a loyal follower of the <a href="http://flask.pocoo.org/">Flask microframework</a>.
+              This is a Python back-end which is simple and open. This repository is a detailed example
+              built for students to demonsrate Flask's ease and power.</p>
+              <a href="https://github.com/robertjdominguez/flask-guide"><i class="fab fa-github-square" title="Code on GitHub" style="font-size:36px" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
