--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <section id="Background" class="section">
   <div class="container">
     <div class="jumbotron justify-content:center"></p>
-      <h1 class="text-center">Who am I?</h1>
+      <h1 class="text-center">Who I am</h1>
       <div class="text-center">
         <img src="profile.jpg" alt="" class="rounded-circle">
       </div>
@@ -73,16 +73,16 @@
 <section id="Portfolio" class="section">
   <div class="container">
     <div class="jumbotron">
-      <h1 class="text-center">What do I do?</h1>
+      <h1 class="text-center">What I do</h1>
       <div class="row">
         <div class="col-sm-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Student Centric</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Education Gamification</h6>
-              <p class="card-text">Student Centric is a gamification platform for students that
-              encourages studying and repetition via a gamification model for the classroom. Teachers
-              can create online quizzes where the students earn XP for completing each quiz.
+              <h5 class="card-title">Web Dev</h5>
+              <p class="card-text">
+                Need a simple static site? Depending on the number of pages/content
+                you desire, turn-around time is around 48 hours! I'll work with you to
+                build a site that helps customers find you and drives business.
               </p>
               <a class="btn" href="http://rdominguez.pythonanywhere.com/"><i class="fas fa-external-link-square-alt" title="Check it out" style="font-size:36px"></i></a>
             </div>
@@ -91,13 +91,11 @@
         <div class="col-sm-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Cheese Wrangler</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Dynamic Trip Manifests</h6>
-              <p class="card-text">The "Cheese Wrangler" system is a dynamically integrated
-              bus manifest system that can be totally controlled via SMS. Using <a href="https://www.twilio.com">Twilio's API</a>,
-              leaders can create trips and students can easily register for the trip itself. Admins
-              have a dashboard that allows them to monitor the progress of trips and see every detail
-              of the trip's manifest.</p>
+              <h5 class="card-title">Back-end Frameworks</h5>
+              <p class="card-text">Creating the logic for a server-side configuration
+              is one of my areas of expertise. I'm well versed in the creation and deployment
+              of Flask applications. Additionally, I enjoy creating locally available scripts
+              to increase productiviy and automate workflows.</p>
               <a href="https://github.com/robertjdominguez/busDriver"><i class="fab fa-github-square" title="Code on GitHub" style="font-size:36px" aria-hidden="true"></i></a>
             </div>
           </div>
@@ -105,8 +103,7 @@
         <div class="col-sm-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">flask-guide</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Evangelism</h6>
+              <h5 class="card-title">Flask Proselytizing</h5>
               <p class="card-text">I've become a loyal follower of the <a href="http://flask.pocoo.org/">Flask microframework</a>.
               This is a Python back-end which is simple and open. This repository is a detailed example
               built for students to demonsrate Flask's ease and power.</p>
@@ -118,8 +115,8 @@
       <br>
       <div class="row">
         <div class="mx-auto">
-          <a href="/"><button type="button" class="btn btn-success">
-            Click here to find out more
+          <a href="services.html"><button type="button" class="btn btn-success">
+            Click here to find out more about my work
           </button></a>
         </div>
       </div>
