--- a/services.html
+++ b/services.html
@@ -11,53 +11,188 @@
 
 <body>
 
-<section>
-  <div class="container">
-    <div class="jumbotron">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Student Centric</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Education Gamification</h6>
-              <p class="card-text">Student Centric is a gamification platform for students that
-              encourages studying and repetition via a gamification model for the classroom. Teachers
-              can create online quizzes where the students earn XP for completing each quiz.
-              </p>
-              <a class="btn" href="http://rdominguez.pythonanywhere.com/"><i class="fas fa-external-link-square-alt" title="Check it out" style="font-size:36px"></i></a>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Rob Dominguez</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#Background">WHO</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/#Portfolio">WHAT</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/#Contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+  </nav>
+  <br>
+  <br>
+
+  <section id="Portfolio" class="section">
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="text-center">web development solutions</h1>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Static and Dyanmic Sites</h5>
+                <p class="card-text">
+                  <h6>Basic Site</h6>
+                  <p>
+                    These static sites are also known as "brochure sites". These simply allow for
+                    customers and clients to find out the basic information about your
+                    business and advertise your services. For those looking to have an online
+                    presence.
+                  </p>
+                  <h6>Enhanced Site</h6>
+                  <p>
+                    Enhanced sites are a step up from a basic site. An enhanced site
+                    adds a more attractive user interface with JavaScript to give a more
+                    attractive asthetic and enhanced interaction for users.
+                  </p>
+                  <h6>Dyanmic Site</h6>
+                  <p>
+                    Dynamic sites are also known as a "platform". These sites are essentially
+                    applications that run on the web. These sites are ideal for businesses and orgnaizations
+                    that need to manage content and provide a link between customers and employees.
+                  </p>
+                  <br>
+                  <table class="table table-striped">
+                    <th>Service</th>
+                    <th>Details</th>
+                    <th>Cost</th>
+                    <tr>
+                      <td>Basic Site</td>
+                      <td>
+                        <ul>
+                          <li>1 - 3 static pages</li>
+                          <li>Domain registration included</li>
+                          <li>Support and content updates</li>
+                          <li>Responsive: mobile-first design</li>
+                        </ul>
+                      </td>
+                      <td>
+                        $500
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Enhanced Site</td>
+                      <td>
+                        <ul>
+                          <li>Dynamic landing page</li>
+                          <li>1 - 7 static pages</li>
+                          <li>Enhanced user interface</li>
+                          <li>Domain registration included</li>
+                          <li>Support and content updates</li>
+                          <li>Responsive: mobile-first design</li>
+                        </ul>
+                      </td>
+                      <td>
+                        $750
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Dynamic Site</td>
+                      <td>
+                        <ul>
+                          <li>Everything included in the previous two packages
+                          plus:</li>
+                          <ul>
+                            <li>User-authenticated areas</li>
+                            <li>Admin dashboard</li>
+                            <li>Content-management-system</li>
+                          </ul>
+                        </ul>
+                      </td>
+                      <td>
+                        $1000 (Base price)<sup>*</sup>
+                      </td>
+                    </tr>
+                  </table>
+                  <sup>*</sup> This is a starting price. Depending on the level of
+                  complexity and the time it takes to create, these prices vary.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Cheese Wrangler</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Dynamic Trip Manifests</h6>
-              <p class="card-text">The "Cheese Wrangler" system is a dynamically integrated
-              bus manifest system that can be totally controlled via SMS. Using <a href="https://www.twilio.com">Twilio's API</a>,
-              leaders can create trips and students can easily register for the trip itself. Admins
-              have a dashboard that allows them to monitor the progress of trips and see every detail
-              of the trip's manifest.</p>
-              <a href="https://github.com/robertjdominguez/busDriver"><i class="fab fa-github-square" title="Code on GitHub" style="font-size:36px" aria-hidden="true"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">flask-guide</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Evangelism</h6>
-              <p class="card-text">I've become a loyal follower of the <a href="http://flask.pocoo.org/">Flask microframework</a>.
-              This is a Python back-end which is simple and open. This repository is a detailed example
-              built for students to demonsrate Flask's ease and power.</p>
-              <a href="https://github.com/robertjdominguez/flask-guide"><i class="fab fa-github-square" title="Code on GitHub" style="font-size:36px" aria-hidden="true"></i></a>
-            </div>
+        <br>
+        <div class="row">
+          <div class="mx-auto">
+            <a href="services.html"><button type="button" class="btn btn-success">
+              Click here to start building a site
+            </button></a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
+  <section id="Portfolio" class="section">
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="text-center">Scripting and Automation Services</h1>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Static and Dyanmic Sites</h5>
+                <p class="card-text">
+                  <h6>Srcipting</h6>
+                  <p>
+                    If you're interested in automating certain processes (i.e., repetitive tasks)
+                    whose outcomes can be progromatically achieved, a script may be a great solution
+                    to increaes your productivity. These solutions are custom-built and can be catered
+                    to your exact needs.
+                  </p>
+                  <br>
+                  <table class="table table-striped">
+                    <th>Service</th>
+                    <th>Details</th>
+                    <th>Cost</th>
+                    <tr>
+                      <td>Automation Script</td>
+                      <td>
+                        Solutions vary, but generally this will be a tool that can
+                        either run in the background, on a schedule, or from a simple
+                        interface. These scripts are designed to decrease the workload
+                        from repetitive tasks and increase your productivity.
+                      </td>
+                      <td>
+                        $500 (Base price) <sup>*</sup>
+                      </td>
+                    </tr>
+                  </table>
+                  <sup>*</sup> This is a starting price. Depending on the level of
+                  complexity and the time it takes to create, these prices vary.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="mx-auto">
+            <a href="services.html"><button type="button" class="btn btn-success">
+              Click here to start automating services
+            </button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
